feat(java): Nested property values (#1379)
- Adds support for JSON-style nested properties, including maps and
lists with heterogeneous types.
- Adds a 0x02 type map, using that tag only when necessary.
- New synthetics, excluded from JS/Rust/C++ checks
- Refactors some encoding paths to reduce unnecessary boxing (more to do
on that)
- Makes `Unsigned` classes `Comparable` for use in ordered containers
- Copilot-generated unit tests for un-covered property encoder cases, as
a basis for ...
- Unit tests of round-trip encoding/decoding of various cases

The approach for encoding nested columns is:
- Find all the unique values in keys, values, lists, etc., grouped by
encodable type (int, string, etc.)
- Store each key and value as an index into the combined list of sorted,
unique values, flattening the structure with special values.
- Write a stream for each encodable type with values and integer streams
for length and indexes

Multiple columns can share dictionaries, with the same number of
streams.

Layers containing mixed properties are supported, with nested values for
some features and not for others.

Potential improvements:
- It might make sense to separate integers into signed/unsigned and/or
32/64-bit, even at the cost of additional stream overhead, perhaps based
on analysis of the data to be stored. Currently they're all stored
together, which will be inefficient in certain cases.
- Boolean values cost one byte. They could theoretically be packed into
the high bit of the previous value, at the cost of reducing the range
limits of those values, which may or may not be a problem. But use of
varints makes this complex.
- This is not very efficient for small documents, so it might make sense
to include a special "inline" encoding variant for when, e.g., a value
stream would contain a single value.

---------

Co-authored-by: pre-commit-ci[bot] <66853113+pre-commit-ci[bot]@users.noreply.github.com>
Co-authored-by: Frank Elsinga <frank@elsinga.de>